deployment/manifests/configurator/configurator-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configurator
  labels:
    app: home-assistant
    component: configurator
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
      component: configurator
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: home-assistant
        component: configurator
      namespace: home-automation
    spec:
      containers:
        - name: configurator
          image: "causticlab/hass-configurator-docker:arm"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3218
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
          volumeMounts:
            - mountPath: /config
              name: config
          resources:
            requests:
              memory: "32Mi"
              cpu: 100m
            limits:
              memory: "32Mi"
              cpu: 200m
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-pvc
      nodeSelector:
        beta.kubernetes.io/arch: arm
---
apiVersion: v1
kind: Service
metadata:
  name: configurator
  labels:
    app: home-assistant
    component: configurator
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3218
      protocol: TCP
      targetPort: 3218
  selector:
    app: home-assistant
    component: configurator
